# dnsblocker

./: .gitignore  Cargo.toml  query.sql  sqlite.db
migrations/2023-10-02-094250_init/: down.sql  up.sql
migrations/2023-10-03-072238_base_data/: down.sql  up.sql
server/migrations/2023-10-02-094250_init/: up.sql
server/src/: main.rs  models.rs
src/: main.rs  models.rs  schema.rs
ui/: package.json  pnpm-lock.yaml
ui/src-tauri/: Cargo.toml  tauri.conf.json
