[package]
name = "dnsblocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["json"] }
chrono = { version = "0.4.31", features = ["clock"] }
clap = "4.4.6"
diesel = { version = "2.1.2", features = ["chrono"] }
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
trust-dns-resolver = "0.23.0"
trust-dns-server = "0.23.0"
